# ExcelTrans

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_exe.py  requirements.txt  setup.cfg
src/ExcelTrans/: main.py
