[metadata]
name = excel-trans
version = 1.0.0
description = 考勤数据处理工具
long_description = file: README.md
long_description_content_type = text/markdown
author = 7ping
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=2.0.0
    openpyxl>=3.0.0

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    excel-trans = ExcelTrans.main:main